# GoogleWorkspace_Orchestrator

./: .env.example  .gitignore  API.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample_queries.json
app/: config.py  main.py
app/agents/: base.py  drive_agent.py  gcal_agent.py  gmail_agent.py  mock_data.py
app/api/v1/: auth.py  query.py  sync.py
app/cache/: redis_client.py
app/core/: intent_classifier.py  orchestrator.py  query_planner.py  response_synthesizer.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 12fcc2cf93a6_initial_schema.py
app/models/: __init__.py  cache.py  conversation.py  user.py
app/schemas/: query.py
app/services/: embedding.py  google_auth.py  vector_search.py
app/workers/: celery_app.py  tasks.py
scripts/: run_demo.py  seed_demo.py
tests/: conftest.py  test_agents.py  test_api.py  test_intent_classifier.py  test_orchestrator.py  test_query_planner.py
